# GOIT_WEB_dz11

./: pyproject.toml
src/: schemas.py
